--- a/PROG8711Week4Workshop/Ex08Cart/packages.config
+++ b/PROG8711Week4Workshop/Ex08Cart/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="bootstrap" version="3.3.6" targetFramework="net452" />
   <package id="jQuery" version="1.9.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net48" />
+  <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
 </packages>
