Fix: server form in master page, friendly URLs everywhere, cookie cleanup, NuGet restore

--- a/PROG8711Week4Workshop/Ex08Cart/ChigozieNweke_BookStore.csproj
+++ b/PROG8711Week4Workshop/Ex08Cart/ChigozieNweke_BookStore.csproj
@@ -25,6 +25,7 @@
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
     <Use64BitIISExpress />
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
